@@ -1,10 +1,11 @@
 0.57 2024-10-01
         - Support VCs via URL without queries (diewald)
         - Added translations for regexp and FCSQL (r-wilm)
-        - Introduce 'ui-ready' global event. (diewald)
+        - Introduce 'ui-ready' global event (diewald)
         - Don't show random page option for single page
           results (diewald)
         - Move page to top after click on example queries (diewald)
+        - Disable sidebar via stash (diewald)
 
 0.56 2024-09-23
         - Improve slim test for plugin support
